--- a/mvc course work/mvc course work.csproj
+++ b/mvc course work/mvc course work.csproj
@@ -176,6 +176,14 @@
     <Compile Include="Migrations\201604170809166_Initial1.Designer.cs">
       <DependentUpon>201604170809166_Initial1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604171620037_Initial2.cs" />
+    <Compile Include="Migrations\201604171620037_Initial2.Designer.cs">
+      <DependentUpon>201604171620037_Initial2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604171622278_Initial3.cs" />
+    <Compile Include="Migrations\201604171622278_Initial3.Designer.cs">
+      <DependentUpon>201604171622278_Initial3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DAL\DriverRepository.cs" />
@@ -304,6 +312,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604170809166_Initial1.resx">
       <DependentUpon>201604170809166_Initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604171620037_Initial2.resx">
+      <DependentUpon>201604171620037_Initial2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604171622278_Initial3.resx">
+      <DependentUpon>201604171622278_Initial3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
